--- a/README.rdoc
+++ b/README.rdoc
@@ -4,6 +4,16 @@ source code of http://wowarmory.me
 
 == 功能
 
-1. 记录已登记角色的每日的英雄榜变动
+1. 记录魔兽世界人物角色每一天的英雄榜
 
 2. 好吧，貌似就一个功能...
+
+== 使用方法
+
+1. 查看你的角色（首次被查看的角色将被服务器登记）
+
+2. 山口山
+
+3. 当英雄榜发生变动时，服务器将记录角色此时的英雄榜
+
+4. 当想查看过去英雄榜时，重复第一步
