remove .DS_Store

--- a/README.rdoc
+++ b/README.rdoc
@@ -12,8 +12,8 @@ source code of http://wowarmory.me
 
 1. 查看你的角色（首次被查看的角色将被服务器登记）
 
-2. 山口山
+2. Go WOW.....
 
-3. 当英雄榜发生变动时，服务器将记录角色此时的英雄榜
+3. 当英雄榜发生变动时，服务器将记录角色此时的英雄榜（记录周期为一天）
 
-4. 当想查看过去英雄榜时，重复第一步
+4. 当想查看角色过去英雄榜时，重复第一步
